plugins {
    id 'java'
    id 'jacoco-report-aggregation'
}

group 'com.kaua.ecommerce.users.application'
version '0.2.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation(project(":domain"))

    testImplementation 'org.mockito:mockito-junit-jupiter:4.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

jacocoTestReport {
    reports {
        csv.required = true
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.95
            }
        }
    }
}

test {
    useJUnitPlatform()
}